<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181310"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="monospace"
            android:text="@string/welcome"
            android:textColor="#fdfdfd"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            android:layout_gravity="center"
            android:text="@string/infoym"
            android:textColor="#9999" />

        <Button
            android:id="@+id/button4"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#fdfdfd"
            android:backgroundTint="#998100"
            android:text="@string/continuee" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>